--- a/client/src/app/views/teams/player-create/player-create.component.html
+++ b/client/src/app/views/teams/player-create/player-create.component.html
@@ -37,8 +37,8 @@
                   </c-form-check>
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" (click)="resetForm()" cButton color="danger">Cancel</button>
-              <button type="submit" cButton color="success">Add Player</button>
+              <button type="button" (click)="resetForm()" cButton color="warning">Cancel</button>
+              <button type="submit" cButton color="dark">Add Player</button>
             </div>
           </form>
     </c-card-body>
