--- a/client/src/app/views/teams/team-create/team-create.component.html
+++ b/client/src/app/views/teams/team-create/team-create.component.html
@@ -25,9 +25,6 @@
 <app-player-list [players]="players" (removePlayerEvent)="removePlayer($event)"></app-player-list>
 
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-    <button type="button"  (click)="cancel()" cButton color="danger">Cancel</button>
-    <button type="button" (click)="submitTeam()" cButton color="success">Submit Team</button>
+    <button type="button"  (click)="cancel()" cButton color="warning">Cancel</button>
+    <button type="button" (click)="submitTeam()" cButton color="dark">Submit Team</button>
 </div>
-
-{{ teamForm.value | json}}
-{{ teamForm.status}}
