added match delete

--- a/client/src/app/views/matches/match-view/match-view.component.html
+++ b/client/src/app/views/matches/match-view/match-view.component.html
@@ -98,7 +98,9 @@
                       </table>
                 </div>
             </div>
-            
+            <div class="d-flex w-100 justify-content-between">
+                <button type="button" (click)="deleteMatch()" cButton color="danger">Delete Match</button>
+            </div>
         </div>
     </c-card-body>
 </c-card>
